[tool.poetry]
name = "tools"
version = "0.1.0"
description = "tools"
authors = ["ikievite <ikievite@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
