[tool.poetry]
name = "tools"
version = "0.1.0"
description = "tools"
authors = ["ikievite <ikievite@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
scrapli = {extras = ["asyncssh"], version = "^2022.7.30.post1"}
scrapli-community = {git = "https://github.com/scrapli/scrapli_community"}


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
wemake-python-styleguide = "^0.17.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ttp = "^0.9.2"
types-requests = "^2.28.11.7"
ipython = "^8.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "wemake"
line_length = 99
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
pretty = true
